# freetype

./: meson.build
include/freetype/config/: ftmodule.h
src/gzip/: ftgzip.c
src/sfnt/: pngshim.c
